WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
249856
[IFC][hanging punctuation] Fix fast/text/hanging-punctuation-first.html
https://bugs.webkit.org/show_bug.cgi?id=249856
Summary
[IFC][hanging punctuation] Fix fast/text/hanging-punctuation-first.html
alan
Reported
2022-12-23 17:26:55 PST
ssia
Attachments
Patch
(6.95 KB, patch)
2022-12-23 17:48 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-12-23 17:48:51 PST
Created
attachment 464188
[details]
Patch
EWS
Comment 2
2022-12-24 07:52:16 PST
Committed
258320@main
(27f65a2d3185): <
https://commits.webkit.org/258320@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464188
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-12-24 07:53:17 PST
<
rdar://problem/103685440
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug