[IFC][hanging punctuation] Fix fast/text/hanging-punctuation-first.html https://bugs.webkit.org/show_bug.cgi?id=249856

Reviewed by Antti Koivisto.

Trailing hanging punctuation (this is 'last' and not allow/force-end on "stop or comma") applies to the last formatted line only.
Here we try to guess (before line breaking) if we are currently on the last line and whether the punctuation glyph should be considered hanging.
This patch ensures that trimmable whitespace (and some other "empty" inline text items) after the punctuation glyph does not
prevent hanging.
(also in this patch, the "stop-or-comma" check is removed as such trailing content can hang on every line.)

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::trailingPunctuationOrStopOrCommaWidthForLineCandiate const):
(WebCore::Layout::LineBuilder::candidateContentForLine):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:

Canonical link: https://commits.webkit.org/258320@main