Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp
@@ -667,28 +667,13 @@ InlineLayoutUnit LineBuilder::leadingPunctuationWidthForLineCandiate(size_t firs
     return TextUtil::hangablePunctuationStartWidth(inlineTextItem, style);
 }
 
-InlineLayoutUnit LineBuilder::trailingPunctuationOrStopOrCommaWidthForLineCandiate(size_t lastInlineTextItemIndex, size_t candidateContentEnd, size_t layoutRangeEnd) const
+InlineLayoutUnit LineBuilder::trailingPunctuationOrStopOrCommaWidthForLineCandiate(size_t lastInlineTextItemIndex, size_t layoutRangeEnd) const
 {
-    ASSERT(candidateContentEnd <= layoutRangeEnd);
     auto& inlineTextItem = downcast<InlineTextItem>(m_inlineItems[lastInlineTextItemIndex]);
     auto& style = isFirstFormattedLine() ? inlineTextItem.firstLineStyle() : inlineTextItem.style();
 
-    auto isContentfulInlineItem = [&](auto& inlineItem) {
-        if (inlineItem.isFloat())
-            return false;
-        return inlineItem.isBox()
-            || inlineItem.isText()
-            || (inlineItem.isInlineBoxStart() && formattingContext().geometryForBox(inlineItem.layoutBox()).marginBorderAndPaddingStart())
-            || (inlineItem.isInlineBoxEnd() && formattingContext().geometryForBox(inlineItem.layoutBox()).marginBorderAndPaddingEnd());
-    };
-
-    auto index = lastInlineTextItemIndex + 1;
     if (TextUtil::hasHangableStopOrCommaEnd(inlineTextItem, style)) {
         // Stop or comma does apply to all lines not just the last formatted one.
-        for (; index < candidateContentEnd; ++index) {
-            if (isContentfulInlineItem(m_inlineItems[index]))
-                return { };
-        }
         return TextUtil::hangableStopOrCommaEndWidth(inlineTextItem, style);
     }
 
@@ -697,8 +682,22 @@ InlineLayoutUnit LineBuilder::trailingPunctuationOrStopOrCommaWidthForLineCandia
         // may have to fallback to a post-process setup, where after finishing laying out the content, we go back and re-layout
         // the last (2?) line(s) when there's trailing hanging punctuation.
         // For now let's probe the content all the way to layoutRangeEnd.
-        for (; index < layoutRangeEnd; ++index) {
-            if (isContentfulInlineItem(m_inlineItems[index]))
+        for (auto index = lastInlineTextItemIndex + 1; index < layoutRangeEnd; ++index) {
+            auto isContentfulInlineItem = [&] {
+                auto& inlineItem = m_inlineItems[index];
+                if (inlineItem.isFloat())
+                    return false;
+                if (inlineItem.isText()) {
+                    auto& inlineTextItem = downcast<InlineTextItem>(inlineItem);
+                    if (inlineTextItem.isFullyTrimmable() || inlineTextItem.isEmpty() || inlineTextItem.isWordSeparator() || inlineTextItem.isZeroWidthSpaceSeparator() || inlineTextItem.isQuirkNonBreakingSpace())
+                        return false;
+                    return true;
+                }
+                return inlineItem.isBox()
+                    || (inlineItem.isInlineBoxStart() && formattingContext().geometryForBox(inlineItem.layoutBox()).marginBorderAndPaddingStart())
+                    || (inlineItem.isInlineBoxEnd() && formattingContext().geometryForBox(inlineItem.layoutBox()).marginBorderAndPaddingEnd());
+            }();
+            if (isContentfulInlineItem)
                 return { };
         }
         return TextUtil::hangablePunctuationEndWidth(inlineTextItem, style);
@@ -780,7 +779,7 @@ void LineBuilder::candidateContentForLine(LineCandidate& lineCandidate, size_t c
         auto hangingContentWidth = lineCandidate.inlineContent.continuousContent().hangingContentWidth();
         // Do not even try to check for trailing punctuation when the candidate content already has whitespace type of hanging content.
         if (!hangingContentWidth && lastInlineTextItemIndex)
-            hangingContentWidth += trailingPunctuationOrStopOrCommaWidthForLineCandiate(*lastInlineTextItemIndex, softWrapOpportunityIndex, layoutRange.end);
+            hangingContentWidth += trailingPunctuationOrStopOrCommaWidthForLineCandiate(*lastInlineTextItemIndex, layoutRange.end);
         if (firstInlineTextItemIndex)
             hangingContentWidth += leadingPunctuationWidthForLineCandiate(*firstInlineTextItemIndex, currentInlineItemIndex);
         lineCandidate.inlineContent.setHangingContentWidth(hangingContentWidth);
